Fixing word wrapping

--- a/Herd.Web/ClientApp/app/components/status/status.component.css
+++ b/Herd.Web/ClientApp/app/components/status/status.component.css
@@ -26,3 +26,7 @@ p {
 .time-stamp {
     color: #adb5bd;
 }
+
+.status-content {
+    width: inherit;
+}
